@@ -994,7 +994,7 @@ public class UserController {
                 userRepository.findAll().stream()
                         .filter(User::isEnabled)
                         .map(this::toUserSummaryDTO)
-                        .collect(java.util.stream.Collectors.toList());
+                        .toList();
 
         return ResponseEntity.ok(users);
     }
